Smoke Simulation crashes on eevee and is not persistent on Cycles #74901

Closed
opened 2020-03-19 00:48:12 +01:00 by Nikolaij · 19 comments

System Information
Operating system: Windows 10 64bit
Graphics card: gtx 950

Blender Version
Blender 2.82a (00:40 Uhr 03.19.2020)
Short description of error
A smokesimulation wont stay after the last simulation frame ends.

Exact steps for others to reproduce the error

  • Open the attached file, bake data.
  • render frame 1-3 -> smoke
  • render frame 4-5 -> no more smoke
    If you render in Eevee it crashes
    #74901.blend
    Im not entirely sure if this is considered a bug, but if I remember correctly this wasn't the case in older blender versions.
    If this is ment to e this way you would help me with a workaround.
**System Information** Operating system: Windows 10 64bit Graphics card: gtx 950 **Blender Version** Blender 2.82a (00:40 Uhr 03.19.2020) **Short description of error** A smokesimulation wont stay after the last simulation frame ends. **Exact steps for others to reproduce the error** - Open the attached file, bake data. - render frame 1-3 -> smoke - render frame 4-5 -> no more smoke If you render in Eevee it crashes [#74901.blend](https://archive.blender.org/developer/F8415731/T74901.blend) Im not entirely sure if this is considered a bug, but if I remember correctly this wasn't the case in older blender versions. If this is ment to e this way you would help me with a workaround.
Author

Added subscriber: @FATTOMCAT

Added subscriber: @FATTOMCAT

#75163 was marked as duplicate of this issue

#75163 was marked as duplicate of this issue
Ankit Meel changed title from Smoke Simulation not persistent to Smoke Simulation not persistent after 50 frames 2020-03-19 09:59:10 +01:00
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

This comment was removed by @ankitm

*This comment was removed by @ankitm*
Member

This comment was removed by @ankitm

*This comment was removed by @ankitm*
Author

I do not want to bake the simulation further, I want it to stay unchanged for the rest of the animaiton. This was no problem in previous blender versions, this changed with the new fluid simulation engine.
I checked it in blender 2.79b and 2.81.
I was able to render smoke beyond the baked frame range, even though the simulation does not change anymore.
I tested your .blend file with the exact same result.
I literally used todays builds (the official 2.82 and the experimental 2.83) with the same behaviour.

Probably I am the most stupid user ever reported a bug, but I can't find a render range in the chache dropdown. To me its described as the simulation range, which I do not want to change.
Blender 2.81 : untitled.blend

Blender 2.82 : untitled_2.82.blend

I do not want to bake the simulation further, I want it to stay unchanged for the rest of the animaiton. This was no problem in previous blender versions, this changed with the new fluid simulation engine. I checked it in blender 2.79b and 2.81. I was able to render smoke beyond the baked frame range, even though the simulation does not change anymore. I tested your .blend file with the exact same result. I literally used todays builds (the official 2.82 and the experimental 2.83) with the same behaviour. Probably I am the most stupid user ever reported a bug, but I can't find a render range in the chache dropdown. To me its described as the simulation range, which I do not want to change. Blender 2.81 : [untitled.blend](https://archive.blender.org/developer/F8415674/untitled.blend) Blender 2.82 : [untitled_2.82.blend](https://archive.blender.org/developer/F8415676/untitled_2.82.blend)
Member

my bad. Correcting after a quick test.

my bad. Correcting after a quick test.
Member

Changed status from 'Archived' to: 'Needs Triage'

Changed status from 'Archived' to: 'Needs Triage'
Member

edited the file for 3 frames simulation and 5 render. sampling 1. saves png files in current woking directory. 4 & 5 are noiseless (smokeless).

edited the file for 3 frames simulation and 5 render. sampling 1. saves png files in current woking directory. 4 & 5 are noiseless (smokeless).

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
Although smoke appears in the viewport, it does not appear in the render.
And on Eevee the render Crashes!

I can confirm. Although smoke appears in the viewport, it does not appear in the render. And on Eevee the render Crashes!
Member

I thought the crash on eevee was related to the Mac+intel thing. So I changed it to cycles and didn't report.

I thought the crash on eevee was related to the Mac+intel thing. So I changed it to cycles and didn't report.

Added subscriber: @sebbas

Added subscriber: @sebbas

Added subscriber: @shadeling

Added subscriber: @shadeling
Germano Cavalcante changed title from Smoke Simulation not persistent after 50 frames to Smoke Simulation crashes on eevee and is not persistent on Cycles 2020-03-31 15:36:16 +02:00

Looking into this issue right now. The crash on render with EEVEE was introduced in 5260aaf3b1.

Looking into this issue right now. The crash on render with EEVEE was introduced in 5260aaf3b1c8.

This issue was referenced by 0b86943641

This issue was referenced by 0b86943641ec59d7f1a0799c0f709e4f23d619f8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastián Barschkis self-assigned this 2020-04-10 12:10:45 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74901
No description provided.