Fix T74901: Smoke Simulation crashes on eevee and is not persistent on Cycles

Issue was introduced in 5260aaf3b1c8 (fix for T73921).